[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
base64 = "0.22.0"
openssl = "0.10.64"
openssl-sys = "0.9.102"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
salvo = { version = "0.64.0", features = ["test", "compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
